[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.69"
cps = "0.2.2"
lazy_static = "1.4.0"
paste = "1.0.12"
strum = "0.24.1"
strum_macros = "0.24"

[dev-dependencies]
rand = "0.8.5"
